--- a/URLShortener/Gemfile
+++ b/URLShortener/Gemfile
@@ -27,7 +27,7 @@ gem 'pry-rails'
 gem 'annotate'
 # Use Unicorn as the app server
 # gem 'unicorn'
-
+gem 'launchy'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
